css cleanup and fixes

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -40,8 +40,10 @@
     <div class="row">
         <div class="column left">
             {% include "includes/l-col.html" %}
+            {% include "includes/links.html" %}
         </div>
-        <div class="column right" style="background-color:#bbb;">
+        <!--div class="column right" style="background-color:#bbb" debug-->
+        <div class="column right">
             {% include "includes/r-col.html" %}
         </div>
     </div>
