--- a/application/templates/includes/l-col.html
+++ b/application/templates/includes/l-col.html
@@ -1,4 +1,3 @@
 <img src="{{ url_for('static', filename='images/portrait.jpg') }}", alt="Me" class="center">
-<h1>Jacob Cohen</h1>
+<h1>JACOB COHEN</h1>
 <p>Computer Science, Cybersecurity, Data Engineering, System Analytics</p>
-<a href=" url_for('static', filename='files/JacobCResume.pdf') }}" class="fa-file-alt" title="Resume">Resume</a>
