--- a/application/templates/includes/r-col.html
+++ b/application/templates/includes/r-col.html
@@ -1,4 +1,10 @@
-<h2>Work Experience</h2>
-<h2>Education</h2>
-<h2>Publications</h2>
-<h2>Projects and Extracurriculars</h2>
+<h2>WORK EXPERIENCE</h2>
+    <ul>
+        <p>Heyo</p>
+        <p>Heyo</p>
+        <p>Heyo</p>
+    </ul>
+
+<h2>EDUCATION</h2>
+<h2>PUBLICATIONS</h2>
+<h2>PROJECTS AND EXTRACURRICULARS</h2>
