--- a/application/templates/includes/links.html
+++ b/application/templates/includes/links.html
@@ -1,9 +1,16 @@
-<a href="{{ url_for('static', filename='files/JacobCResume.pdf') }}" target="_blank" class="icon fa-file-text">Resume</a>
-    <!--li class="ricons">
-        <li><a href="{{ url_for('static', filename='files/JacobCResume.pdf') }}" target="_blank" class="fa-linkedin" title="Resume">Resume</a></li-->
 <div class="container-fluid text-center bottom-container">
+    <ul class="icons">
+    <li><a href="{{ url_for('static', filename='files/JacobCResume.pdf') }}" target="_blank" class="fa-file-text">Resume</a></li>
+</div>
+<div class="container-fluid text-right bottom-container">
+        <ul class="icons">
+        <li><a href="mailto:jacobac@umd.edu" class="fa-envelope" title="Email"></a></li>
+        <li><a href="https://www.linkedin.com/in/jacobac" class="fa-linkedin" title="LinkedIn"></a></li>
+        <li><a href="https://www.github.com/jacobacohen" class="fa-github" title="Github"></a></li>
+</div>
+<!--div class="container-fluid text-center bottom-container">
         <ul class="icons">
         <li><a href="mailto:jacobac@umd.edu" class="fa-envelope" title="Email">Email</a></li>
         <li><a href="https://www.linkedin.com/in/jacobac" class="fa-linkedin" title="LinkedIn">LinkedIn</a></li>
         <li><a href="https://www.github.com/jacobacohen" class="fa-github" title="Github">Github</a></li>
-</div>
+</div-->
