new sections and content update

--- a/application/templates/includes/footer.html
+++ b/application/templates/includes/footer.html
@@ -1,8 +1,14 @@
-<div class="container-fluid text-center bottom-container">
-    <footer>
-        <ul class="icons">
-        <li><a href="mailto:jacobac@umd.edu" class="fa-envelope" title="Email">Email</a></li>
-        <li><a href="https://www.linkedin.com/in/jacobac" class="fa-linkedin" title="LinkedIn">LinkedIn</a></li>
-        <li><a href="https://www.github.com/jacobacohen" class="fa-github" title="Github">Github</a></li>
-    </footer>
+<style>
+
+div.footer {
+    left:0px;
+    bottom:0px;
+    width:100%;
+    color:#000000;
+}
+
+</style>
+
+<div class="footer">
+    <p>Jacob Cohen 2019. Made with <a href="https://flask.palletsprojects.com/en/1.1.x/" target="_blank">Flask</a>. Deployed with <a href="https://www.netlify.com" target="_blank">Netlify.</a></p>
 </div>
