--- a/application/templates/includes/r-col.html
+++ b/application/templates/includes/r-col.html
@@ -1,42 +1,38 @@
+<style>
+
+</style>
+
+
 <h2>WORK EXPERIENCE</h2>
+<ul>
+    <h3>High Performance Computing Intern - Army Research Laboratory<br>2016-Present | Aberdeen Proving Grounds, Maryland</h3>
     <ul>
-        <p>High Performance Computing Intern - Army Research Laboratory</p>
-        <p>2016-Present | Aberdeen Proving Grounds, Maryland</p>
         <p>Developed and implemented a variety of data collection components used for system data collection on High Performance Computing (HPC) systems. Solutions developed provide tracking of research application licenses and system/node resource usage data through use of Regular Expressions, Python, MySQL, Facebook’s Osquery, the Elastic Stack, and more.</p>
     </ul>
+</ul>
 
 <h2>EDUCATION</h2>
+<ul>
+    <p>B.S. in Computer Science - Cybersecurity Concentration<br>2016-2020 (Anticipated Graduation: May 2020) | University of Maryland - College Park</p>
     <ul>
-        <p> B.S. in Computer Science - Cybersecurity Concentration</p>
-        <p> 2016-2020 (Anticipated Graduation: May 2020) | University of Maryland - College Park</p>
-        <ul>
-            <p><i>Minors:</i> Advanced Cybersecurity Experience for Students (ACES) & Geographic Information Science (GIS)</p>
-            <p>Honors College & Scholars (Science, Technology, and Society) Programs</p>
-            <p><i>GPA:</i> 3.56</p>
-        </ul>
+        <p><i>Minors:</i> Advanced Cybersecurity Experience for Students (ACES) & Geographic Information Science (GIS)<br>Honors College & Scholars (Science, Technology, and Society) Programs<br><i>GPA:</i> 3.56</p>
     </ul>
+</ul>
 <h2>PUBLICATIONS</h2>
-    <ul>
-        <p>Leveraging Comprehensive Data Analysis to Improve Performance of Parallel HPC Workloads (Presented December 2019, to be published by IEEE BigData soon)</p>
-        <!--p><a href=https://ieeexplore.ieee.org/abstract/document/8622330>Dwyer M., Hwang J., Shires A., <b>Cohen J.</b>, "Application of Comprehensive Data Analysis for Hierarchical Views of HPC Workloads" In <i>2018 IEEE International Conference on Big Data (Big Data) (pp. 3585-3589). IEEE</i></a></p-->
-        <p><a href=https://ieeexplore.ieee.org/abstract/document/8622330 target="_blank">Dwyer M., Hwang J., Shires A., Cohen J., "Application of Comprehensive Data Analysis for Hierarchical Views of HPC Workloads" In <i>2018 IEEE International Conference on Big Data (Big Data) (pp. 3585-3589). IEEE</i></a></p>
-    </ul>
+<ul>
+    <p>Leveraging Comprehensive Data Analysis to Improve Performance of Parallel HPC Workloads (Presented December 2019, to be published by IEEE BigData soon)</p>
+    <!--p><a href=https://ieeexplore.ieee.org/abstract/document/8622330>Dwyer M., Hwang J., Shires A., <b>Cohen J.</b>, "Application of Comprehensive Data Analysis for Hierarchical Views of HPC Workloads" In <i>2018 IEEE International Conference on Big Data (Big Data) (pp. 3585-3589). IEEE</i></a></p-->
+    <p><a href=https://ieeexplore.ieee.org/abstract/document/8622330 target="_blank">Dwyer M., Hwang J., Shires A., Cohen J., "Application of Comprehensive Data Analysis for Hierarchical Views of HPC Workloads" In <i>2018 IEEE International Conference on Big Data (Big Data) (pp. 3585-3589). IEEE</i></a></p>
+</ul>
 <h2>PROJECTS & EXTRACURRICULARS</h2>
-    <ul>
-        <p>2019 NSA Codebreakers Challenge Participant</p>
-        <p>DNS Prefetching Research Project</p>
-        <p>Bitcamp Hackathon Participant</p>
-        <p>Coordinator/Volunteer - Terps4Change at A Wider Circle & TerpFarm</p>
-        <p>Team Challenge Participant at Cyberskylines Competition</p>
-    </ul>
+<ul>
+    <p>2019 NSA Codebreakers Challenge Participant<br>DNS Prefetching Research Project<br>Bitcamp Hackathon Participant<br>Coordinator/Volunteer - Terps4Change at A Wider Circle & TerpFarm<br>Team Challenge Participant at Cyberskylines Competition</p>
+</ul>
 <h2>CERTIFICATIONS</h2>
-    <ul>
-        <p>Cisco CCENT</p>
-        <p>CompTIA A+</p>
-    </ul>
+<ul>
+    <p>Cisco CCENT<br>CompTIA A+</p>
+</ul>
 <h2>AWARDS</h2>
-    <ul>
-        <p>Dean's List for Computer Science</p>
-        <p>DoD SMART Scholarship Awardee</p>
-        <p>Armed Forces Communications & Electronics Association Scholarship</p>
-    </ul>
+<ul>
+    <p>Dean's List for Computer Science<br>DoD SMART Scholarship Awardee<br>Armed Forces Communications & Electronics Association Scholarship</p>
+</ul>
