--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300");
+@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:400");
 
 /*
 	Identity by HTML5 UP
@@ -117,7 +117,6 @@
 		-ms-transition: color 0.2s ease, border-color 0.2s ease;
 		transition: color 0.2s ease, border-color 0.2s ease;
 		color: inherit;
-		text-decoration: none;
 	}
 
 		a:before {
@@ -371,6 +370,6 @@
 			margin-left: 1.5em;
 		}
 
-.fa-linkedin:hover {
-    color: #000000;
+.resume {
+
 }
