--- a/application/templates/includes/links.html
+++ b/application/templates/includes/links.html
@@ -1,4 +1,12 @@
-<div class="container-fluid text-center bottom-container">
+<style>
+    div.res {
+       position:relative;
+       left:-8%;
+    }
+    div.res {
+    }
+</style>
+<div class="res">
     <ul class="icons">
     <li><a href="{{ url_for('static', filename='files/JacobCResume.pdf') }}" target="_blank" class="fa-file-text">Resume</a></li>
 </div>
