--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -41,11 +41,13 @@
             {% include "includes/l-col.html" %}
             {% include "includes/links.html" %}
             {% include "includes/r-col.html" %}
+            {% include "includes/extras.html" %}
     {% else %}
     <div class="row">
         <div class="column left">
             {% include "includes/l-col.html" %}
             {% include "includes/links.html" %}
+            {% include "includes/extras.html" %}
         </div>
         <!--div class="column right" style="background-color:#bbb" debug-->
         <div class="column right">
@@ -53,6 +55,7 @@
         </div>
     </div>
     {% endif %}
+    {% include "includes/footer.html" %}
 
 </body>
 
