Res updating and publication add

--- a/application/templates/includes/r-col.html
+++ b/application/templates/includes/r-col.html
@@ -20,8 +20,7 @@
 </ul>
 <h2>PUBLICATIONS</h2>
 <ul>
-    <p>Leveraging Comprehensive Data Analysis to Improve Performance of Parallel HPC Workloads (Presented December 2019, to be published by IEEE BigData soon)</p>
-    <!--p><a href=https://ieeexplore.ieee.org/abstract/document/8622330>Dwyer M., Hwang J., Shires A., <b>Cohen J.</b>, "Application of Comprehensive Data Analysis for Hierarchical Views of HPC Workloads" In <i>2018 IEEE International Conference on Big Data (Big Data) (pp. 3585-3589). IEEE</i></a></p-->
+    <p><a href=https://ieeexplore.ieee.org/abstract/document/8622330 target="_blank">Dwyer M., Kaff N., Cohen J., Frauerhoffer M., "Leveraging Comprehensive Data Analysis to Improve Performance of Parallel HPC Workloads" In <i>2019 IEEE International Conference on Big Data (Big Data) (pp. 3960-3967). IEEE</i></a></p>
     <p><a href=https://ieeexplore.ieee.org/abstract/document/8622330 target="_blank">Dwyer M., Hwang J., Shires A., Cohen J., "Application of Comprehensive Data Analysis for Hierarchical Views of HPC Workloads" In <i>2018 IEEE International Conference on Big Data (Big Data) (pp. 3585-3589). IEEE</i></a></p>
 </ul>
 <h2>PROJECTS & EXTRACURRICULARS</h2>
