--- a/application/templates/includes/extras.html
+++ b/application/templates/includes/extras.html
@@ -5,19 +5,24 @@
 <div align="left">
     <h2>PROGRAMMING</h2>
     <ul>
-        <p>Python, Java, C, Bash, R, Ruby, OCaml, Rust, Bash, Latex, & SQL<p>
+        <p>Python, Java, C, Bash/Zsh, Ruby, OCaml, Rust, Bash, Latex, & SQL<p>
     </ul>
 
     <h2>TOOLS</h2>
     <ul>
-        <p>Git, Docker, Elastic Stack (ELT), VIM, JetBrains IDEs, Hadoop, Wireshark, GNU Radio, ArcGIS, Geomatica Focus</p>
+        <p>Git, Containers (Docker/Singularity), Kubernetes, Anaconda, MPI, Elastic Stack, Ghidra, & Vim </p>
     </ul>
-    <h2>ENVIRONMENTS</h2>
+    <!-- <h2>ENVIRONMENTS</h2>
     <ul>
         <p>Unix/Linux (Bash, Zsh), Windows, MacOS</p>
+    </ul> -->
+    <h2>LIBRARIES</h2>
+    <ul>
+        <p>Flask, Django, Pandas, NumPy, Libvirt, Transformers/Simpletransformers (NLP), Tensorflow, & BeautifulSoup<p>
     </ul>
     <h2>COURSEWORK</h2>
     <ul>
         <p>Computer & Network Security, Reverse Engineering, Cryptography, Computer Systems Architecture, Data Structures, Programming Language Technologies & Paradigms, Wireless Communication & Software-Defined Radio, Quantiative Methods, Remote Sensing, GIS</p>
     </ul>
+    <h2> Secret Clearance Held</h2>
 </div>
