--- a/application/templates/includes/footer.html
+++ b/application/templates/includes/footer.html
@@ -10,5 +10,5 @@ div.footer {
 </style>
 
 <div class="footer">
-    <p>Jacob Cohen 2019. Made with <a href="https://flask.palletsprojects.com/en/1.1.x/" target="_blank">Flask</a>. Deployed with <a href="https://www.netlify.com" target="_blank">Netlify.</a></p>
+    <p>Jacob Cohen 2022. Made and launched via <a href="https://flask.palletsprojects.com/en/2.0.x/" target="_blank">Flask</a>. 
 </div>
