--- a/application/templates/includes/l-col-mobile.html
+++ b/application/templates/includes/l-col-mobile.html
@@ -13,8 +13,9 @@ div.center {
 </style>
 
 
-<img src="{{ url_for('static', filename='images/portrait.jpg') }}", alt="Me" class="center">
+<img src="{{ url_for('static', filename='images/new_headshot.jpeg') }}", alt="Me" class="center">
 <div class="center">
     <h1 style="text-align:center">JACOB COHEN</h1>
-    <p style="text-align:center">Computer Science, Cybersecurity, Data Engineering, System Analytics</p>
+    <h2 style="text-align:center">Baltimore, MD</h2>
+    <p style="text-align:center">Computer Science, Customer Solutions, Data Engineering, Cybersecurity</p>
 </div>
