--- a/application/templates/includes/l-col.html
+++ b/application/templates/includes/l-col.html
@@ -1,3 +1,4 @@
-<img src="{{ url_for('static', filename='images/portrait.jpg') }}", alt="Me" class="center">
+<img src="{{ url_for('static', filename='images/new_headshot.jpeg') }}", alt="Me" class="center">
 <h1>JACOB COHEN</h1>
-<p>Computer Science, Cybersecurity, Data Engineering, System Analytics</p>
+<h2>Baltimore, MD</h2>
+<p>Computer Science, Customer Solutions, Data Engineering, Cybersecurity</p>
