--- a/application/templates/includes/links-mobile.html
+++ b/application/templates/includes/links-mobile.html
@@ -19,7 +19,7 @@ div.cent {
 <div class="cent">
     <div class="container-fluid text-right bottom-container">
         <ul class="icons">
-            <li><a href="mailto:jacobac@umd.edu" target="_blank" class="fa-envelope" title="Email"></a></li>
+            <li><a href="mailto:jacobacohen@outlook.com" target="_blank" class="fa-envelope" title="Email"></a></li>
             <li><a href="https://www.linkedin.com/in/jacobac" target="_blank" class="fa-linkedin" title="LinkedIn"></a></li>
             <li><a href="https://www.github.com/jacobacohen" target="_blank" class="fa-github" title="Github"></a></li>
     </div>
