--- a/application/templates/includes/r-col.html
+++ b/application/templates/includes/r-col.html
@@ -1,37 +1,59 @@
+{% block box %}
 <style>
+    .box {
+        background-color: #ffffff;
+        color: #000;
+        padding: 10px;
+        transition: .3s;
+        {% if mobile %}
+        opacity: .7;
+        {% else %}
+        opacity: .5;
+    }
 
+    .box:hover {
+        opacity: .7;
+    }
+    {% endif %}
 </style>
+{% endblock box %}
 
 
-<h2>WORK EXPERIENCE</h2>
-<ul>
-    <h3>High Performance Computing Intern - Army Research Laboratory<br>2016-Present | Aberdeen Proving Grounds, Maryland</h3>
+<div class="box">
+    <h2>WORK EXPERIENCE</h2>
     <ul>
-        <p>Developed and implemented a variety of data collection components used for system data collection on High Performance Computing (HPC) systems. Solutions developed provide tracking of research application licenses and system/node resource usage data through use of Regular Expressions, Python, MySQL, Facebook’s Osquery, the Elastic Stack, and more.</p>
+        <h3>Computer Scientist - Army Research Laboratory: DoD Supercomputing Resource Center<br>August 2020-Present | Aberdeen Proving Grounds, Maryland</h3>
+            <ul>
+                <p>Led, informed, and mobilized various customer projects towards leveraging of High Performance Computing (HPC) Resources. Efforts involved use of technologies such as containerization and various Python libraries (transformers, pandas, pysc2), consistent documentation and leadership during project meetings, and dealt with the domains of ML, NLP, and networking. Other work involvements involved development efforts into a C MPI file transfer application and feature development for a Python Django run virtualization interface. </p>
+            </ul>
+        <h3>HPC Intern/SMART Scholar - Army Research Laboratory: DoD Supercomputing Resource Center<br>2016-2019 | Aberdeen Proving Grounds, Maryland</h3>
+        <ul>
+            <p>Developed and implemented a variety of data collection components used for system data collection on High Performance Computing (HPC) systems. Solutions developed provide tracking of research application licenses and system/node resource usage data through use of Python, MySQL, Facebook’s Osquery, the Elastic Stack, and more.</p>
+        </ul>
     </ul>
-</ul>
 
-<h2>EDUCATION</h2>
-<ul>
-    <p>B.S. in Computer Science - Cybersecurity Concentration<br>2016-2020 (Anticipated Graduation: May 2020) | University of Maryland - College Park</p>
+    <h2>EDUCATION</h2>
     <ul>
-        <p><i>Minors:</i> Advanced Cybersecurity Experience for Students (ACES) & Geographic Information Science (GIS)<br>Honors College & Scholars (Science, Technology, and Society) Programs<br><i>GPA:</i> 3.56</p>
+        <p>B.S. in Computer Science - Cybersecurity Concentration<br> August 2016- May 2020 | University of Maryland - College Park</p>
+        <ul>
+            <p><i>Minors:</i> Advanced Cybersecurity Experience for Students (ACES) & Geographic Information Science (GIS)<br>Honors College & Scholars (Science, Technology, and Society) Programs<br><i>GPA:</i> 3.56</p>
+        </ul>
     </ul>
-</ul>
-<h2>PUBLICATIONS</h2>
-<ul>
-    <p><a href=https://ieeexplore.ieee.org/abstract/document/8622330 target="_blank">Dwyer M., Kaff N., Cohen J., Frauerhoffer M., "Leveraging Comprehensive Data Analysis to Improve Performance of Parallel HPC Workloads" In <i>2019 IEEE International Conference on Big Data (Big Data) (pp. 3960-3967). IEEE</i></a></p>
-    <p><a href=https://ieeexplore.ieee.org/abstract/document/8622330 target="_blank">Dwyer M., Hwang J., Shires A., Cohen J., "Application of Comprehensive Data Analysis for Hierarchical Views of HPC Workloads" In <i>2018 IEEE International Conference on Big Data (Big Data) (pp. 3585-3589). IEEE</i></a></p>
-</ul>
-<h2>PROJECTS & EXTRACURRICULARS</h2>
-<ul>
-    <p>2019 NSA Codebreakers Challenge Participant<br>DNS Prefetching Research Project<br>Bitcamp Hackathon Participant<br>Coordinator/Volunteer - Terps4Change at A Wider Circle & TerpFarm<br>Team Challenge Participant at Cyberskylines Competition</p>
-</ul>
-<h2>CERTIFICATIONS</h2>
-<ul>
-    <p>Cisco CCENT<br>CompTIA A+</p>
-</ul>
-<h2>AWARDS</h2>
-<ul>
-    <p>Dean's List for Computer Science<br>DoD SMART Scholarship Awardee<br>Armed Forces Communications & Electronics Association Scholarship</p>
-</ul>
+    <h2>PUBLICATIONS</h2>
+    <ul>
+        <p><a href=https://ieeexplore.ieee.org/document/9005998 target="_blank">Dwyer M., Kaff N., Cohen J., Frauerhoffer M., "Leveraging Comprehensive Data Analysis to Improve Performance of Parallel HPC Workloads" In <i>2019 IEEE International Conference on Big Data (Big Data) (pp. 3960-3967). IEEE</i></a></p>
+        <p><a href=https://ieeexplore.ieee.org/abstract/document/8622330 target="_blank">Dwyer M., Hwang J., Shires A., Cohen J., "Application of Comprehensive Data Analysis for Hierarchical Views of HPC Workloads" In <i>2018 IEEE International Conference on Big Data (Big Data) (pp. 3585-3589). IEEE</i></a></p>
+    </ul>
+    <h2>PROJECTS & EXTRACURRICULARS</h2>
+    <ul>
+        <p>DNS Prefetching Research Project<br>2019 NSA Codebreakers Challenge Participant<br>Thread Baltimore Volunteer<br>Bitcamp Hackathon Participant<br>Coordinator/Volunteer - Terps4Change at A Wider Circle & TerpFarm<br>Team Challenge Participant at Cyberskylines Competition</p>
+    </ul>
+    <h2>CERTIFICATIONS</h2>
+    <ul>
+        <p>Cisco CCENT<br>CompTIA A+</p>
+    </ul>
+    <h2>AWARDS</h2>
+    <ul>
+        <p>DoD SMART Scholarship Awardee<br>Dean's List for Computer Science (Most semesters)<br>Armed Forces Communications & Electronics Association Scholarship</p>
+    </ul>
+</div>
