--- a/application/templates/includes/r-col.html
+++ b/application/templates/includes/r-col.html
@@ -24,11 +24,18 @@
     <ul>
         <h3>Computer Scientist - Army Research Laboratory: DoD Supercomputing Resource Center<br>August 2020-Present | Aberdeen Proving Grounds, Maryland</h3>
             <ul>
-                <p>Led, informed, and mobilized various customer projects towards leveraging of High Performance Computing (HPC) Resources. Efforts involved use of technologies such as containerization and various Python libraries (transformers, pandas, pysc2), consistent documentation and leadership during project meetings, and dealt with the domains of ML, NLP, and networking. Other work involvements involved development efforts into a C MPI file transfer application and feature development for a Python Django run virtualization interface. </p>
+                <p>Led, informed, and mobilized various Department of Defense (DoD) customer projects towards
+                    leveraging of High Performance Computing (HPC) resources. Efforts involved use of technologies
+                    such as containerization and various Python libraries (transformers, pandas, pysc2), consistent
+                    documentation, leadership throughout project meetings, and dealt with the domains of ML, NLP, and
+                    networking. Other assignments involved development into a multi-threaded C (MPI) file transfer
+                    application and feature development for a Python Django run virtualization interface. </p>
             </ul>
         <h3>HPC Intern/SMART Scholar - Army Research Laboratory: DoD Supercomputing Resource Center<br>2016-2019 | Aberdeen Proving Grounds, Maryland</h3>
         <ul>
-            <p>Developed and implemented a variety of data collection components used for system data collection on High Performance Computing (HPC) systems. Solutions developed provide tracking of research application licenses and system/node resource usage data through use of Python, MySQL, Facebook’s Osquery, the Elastic Stack, and more.</p>
+            <p>Defined, implemented, and developed an Extract, Transform, Load (ETL) data collection framework
+                for use on HPC systems at scale thru stand-up of the Elastic Stack, MySQL, and Osquery. Created
+                solutions provide tracking of research application licenses and system/node resource usage data.</p>
         </ul>
     </ul>
 
